--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "moment": "^2.30.1",
+    "antd": "^5.19.4",
     "react": "^18.3.1",
-    "react-big-calendar": "^1.13.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -26,6 +24,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.3.3",
-    "vite": "^5.3.4"
+    "vite": "^5.3.5"
   }
 }
