--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
