--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.3.3",
     "vite": "^5.3.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   }
 }
