--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.26.0"
