--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ckeditor5": "^42.0.2",
     "ckeditor5-premium-features": "^42.0.2",
     "craco": "^0.0.3",
+    "date-fns": "^3.6.0",
     "html-react-parser": "^5.1.12",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -28,7 +29,7 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
