--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ckeditor/ckeditor5-image": "^43.0.0",
     "@ckeditor/ckeditor5-paragraph": "^43.0.0",
     "@ckeditor/ckeditor5-react": "^8.0.0",
+    "axios": "^1.7.4",
     "ckeditor5": "^42.0.2",
     "ckeditor5-premium-features": "^42.0.2",
     "craco": "^0.0.3",
