--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ckeditor5-premium-features": "^42.0.2",
     "craco": "^0.0.3",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "html-react-parser": "^5.1.12",
     "moment": "^2.30.1",
     "react": "^18.3.1",
