--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "swiper": "^11.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
