--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.26.1",
+    "react-spinners": "^0.14.1",
     "swiper": "^11.1.11"
   },
   "devDependencies": {
