--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
     "swiper": "^11.1.11"
